--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.5.2",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
